# nebula

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
.devcontainer/: devcontainer.json
code/addons/tinyxml/: BUILD.bazel
code/foundation/core/win32/: precompiled.h
code/foundation/http/: httpnzstream.cc
code/foundation/io/zipfs/: ionebula3.cc
code/foundation/util/: arrayallocatorsafe.h  string.h
