load("@rules_cc//cc:cc_library.bzl", "cc_library")

platform(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64", # Can also specify CPU
    ],
)

cc_library(
    name = "my_game",
    deps = [
        # "@glfw//:glfw",  # <--- This links the library we defined
        "@soloud//:soloud",
        "@stackwalker//:stackwalker",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default": [],
    }),
)