load("@rules_cc//cc:cc_library.bzl", "cc_library")

# config_setting(
#     name = "windows_build",
#     constraint_values = [
#         "@platforms//os:windows",
#     ],
# )

# Define config settings for platforms to make selects cleaner
# config_setting(
#     name = "windows_build",
#     constraint_values = ["@platforms//os:windows"],
# )

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

platform(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64", # Can also specify CPU
    ],
)

# cc_library(
#     name = "my_game",
#     deps = [
#         # "@glfw//:glfw",  # <--- This links the library we defined
#         "@soloud//:soloud",
#         "@stackwalker//:stackwalker",
#     ],
#     linkopts = select({
#         "@platforms//os:windows": [],
#         "//conditions:default": [],
#     }),
# )
# The nebula foundation module.
cc_library(
    name = "foundation",
    srcs = [
        "code/foundation/foundation/stdneb.cc"
    ] + glob(
        [
            "code/foundation/**/*.cc",
            "code/addons/nflatbuffer/nebula_flat.cc",
            "code/addons/nflatbuffer/flatbufferinterface.cc",
        ],
        exclude = [
            "code/foundation/foundation/stdneb.cc",
            "code/foundation/core/posix/**",
            "code/foundation/fibers/posix/**",
            "code/foundation/memory/posix/**",
            "code/foundation/memory/osx/**",
            "code/foundation/memory/base/**",
            "code/foundation/util/posix/**",
            "code/foundation/io/posix/**",
            "code/foundation/io/osx/**",
            "code/foundation/timing/posix/**",
            "code/foundation/timing/darwin/**",
            "code/foundation/threading/posix/**",
            "code/foundation/threading/linux/**",
            "code/foundation/threading/gcc/**",
            "code/foundation/threading/osx/**",
            "code/foundation/net/posix/**",
            "code/foundation/system/posix/**",
        ]
    ),
    hdrs = [
        "code/foundation/foundation/stdneb.h"
    ] + glob(
        [
            "code/foundation/**/*.h",
            "code/addons/nflatbuffer/nebula_flat.h",
            "code/addons/nflatbuffer/flatbufferinterface.h",
        ],
        exclude = [
            "code/foundation/foundation/stdneb.h",
            "code/foundation/core/posix/**",
            "code/foundation/fibers/posix/**",
            "code/foundation/memory/posix/**",
            "code/foundation/memory/osx/**",
            "code/foundation/memory/base/**",
            "code/foundation/util/posix/**",
            "code/foundation/io/posix/**",
            "code/foundation/io/osx/**",
            "code/foundation/timing/posix/**",
            "code/foundation/timing/darwin/**",
            "code/foundation/threading/posix/**",
            "code/foundation/threading/linux/**",
            "code/foundation/threading/osx/**",
            "code/foundation/net/posix/**",
            "code/foundation/system/posix/**",
        ]
    ),
    copts = select({
        "@platforms//os:windows": [
            "/FIcode/foundation/foundation/stdneb.h",
        ],
        "//conditions:default": [],
    }),
    includes = [
        "code/foundation",
        "code/addons",
    ],
    defines = select({
        "@platforms//os:windows": [
            "FIPS_WINDOWS",
            "HAS_EMBEDDED_EXPORT",
            "NEBULA_SIMD_X64=1",
            # Assuming these are defined for windows, might need to be adjusted
            "WIN32",
            "_WINDOWS",
            "__WIN32__",
            "__X86__",
            "__WINDOWS__",
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//os:windows": [
            # Windows libs needed.
            "user32.lib",
            "kernel32.lib",
        ],
        ":macos": [
        ],
        ":linux": [
        ],
        "//conditions:default": [],
    }),
    deps = [
        "@stackwalker//:stackwalker",
        # other fips dependencies need to be added here
        "@curl//:curl",
        "@zlib//:zlib",
        "@tinyxml//:tinyxml",
        "@flatbuffers//:flatbuffers",
        "@tinyfiledialogs//:tinyfiledialogs",
        # "@flatbuffers//:flatbuffers", # nflatbuffer dependency
    ],
)

# # The nebula input module.
# cc_library(
#     name = "input",
#     srcs = glob(["code/input/input/**/*.cc", "code/input/input/base/**/*.cc", "code/input/input/glfw/**/*.cc"]),
#     hdrs = glob(["code/input/input/**/*.h", "code/input/input/base/**/*.h", "code/input/input/glfw/**/*.h"]),
#     includes = [
#         "code/input",
#     ],
#     deps = [":foundation"],
# )

# # The nebula resource module.
# cc_library(
#     name = "resource",
#     srcs = glob(["code/resource/resources/**/*.cc"]),
#     hdrs = glob(["code/resource/resources/**/*.h"]),
#     includes = [
#         "code/resource",
#         "code/foundation",
#     ],
#     deps = [":foundation"],
# )

# # The nebula options module.
# cc_library(
#     name = "options",
#     srcs = ["code/options/options.cc"],
#     hdrs = ["code/options/options.h"],
#     includes = [
#         "code/options",
#         "code/foundation",
#     ],
#     deps = [":foundation"],
# )

# # The nebula render module.
# cc_library(
#     name = "render",
#     srcs = glob(
#         ["code/render/**/*.cc"],
#         exclude = [
#             "code/render/coregraphics/vk/**",
#             "code/render/instancing/vk/**",
#         ]
#     ),
#     hdrs = glob(
#         ["code/render/**/*.h"],
#         exclude = [
#             "code/render/coregraphics/vk/**",
#             "code/render/instancing/vk/**",
#         ]
#     ),
#     includes = [
#         "code/render",
#         "code/addons",
#     ],
#     defines = select({
#         ":windows_build": [
#             "N_USE_D3D11",
#         ],
#         "//conditions:default": [],
#     }),
#     deps = [
#         ":foundation",
#         ":input",
#         ":resource",
#         ":options",
#         # "@anyfx//:anyfx",
#         # "@imgui//:imgui",
#         # "@glfw//:glfw", # for vulkan
#     ],
# )

# # The nebula physics module.
# cc_library(
#     name = "physics",
#     srcs = glob(["code/physics/physics/**/*.cc", "code/physics/physicsinterface.cc"]),
#     hdrs = glob(["code/physics/physics/**/*.h", "code/physics/physicsinterface.h"]),
#     includes = [
#         "code/physics",
#     ],
#     deps = [
#         ":foundation",
#         ":resource",
#         ":render",
#         #":nflatbuffer",
#         # "@physx//:physx",
#     ],
# )

# # The nebula audio module.
# cc_library(
#     name = "audio",
#     srcs = glob(["code/audio/audio/**/*.cc"]),
#     hdrs = glob(["code/audio/audio/**/*.h"]),
#     includes = [
#         "code/audio",
#     ],
#     linkopts = select({
#         ":windows_build": [
#             "/WHOLEARCHIVE:audio",
#         ],
#         "//conditions:default": [],
#     }),
#     deps = [
#         ":foundation",
#         ":resource",
#         "@soloud//:soloud",
#     ],
# )

# # The nebula memdb addon.
# cc_library(
#     name = "memdb",
#     srcs = glob(["code/addons/memdb/*.cc"]),
#     hdrs = glob(["code/addons/memdb/*.h"]),
#     includes = [
#         "code/foundation",
#     ],
#     deps = [":foundation"],
# )

# # The nebula application module.
# cc_library(
#     name = "application",
#     srcs = glob([
#         "code/application/game/**/*.cc",
#         "code/application/game/messaging/**/*.cc",
#         "code/application/basegamefeature/**/*.cc",
#         "code/application/basegamefeature/managers/**/*.cc",
#         "code/application/basegamefeature/components/**/*.cc",
#         "code/application/appgame/**/*.cc",
#     ]),
#     hdrs = glob([
#         "code/application/game/**/*.h",
#         "code/application/game/messaging/**/*.h",
#         "code/application/basegamefeature/**/*.h",
#         "code/application/basegamefeature/managers/**/*.h",
#         "code/application/basegamefeature/components/**/*.h",
#         "code/application/appgame/**/*.h",
#         "code/application/application/stdneb.h",
#     ]),
#     includes = [
#         "code/application",
#     ],
#     linkopts = select({
#         ":windows_build": [
#             "/WHOLEARCHIVE:application",
#         ],
#         "//conditions:default": [],
#     }),
#     deps = [
#         ":foundation",
#         ":resource",
#         ":memdb",
#         ":input",
#         ":options",
#         # "@imgui//:imgui",
#     ],
# )

# # The nebula toolkit-common module.
# cc_library(
#     name = "toolkit-common",
#     srcs = glob(
#         ["toolkit/toolkit-common/**/*.cc"],
#         exclude = ["toolkit/toolkit-common/posix/**"],
#     ),
#     hdrs = glob(
#         ["toolkit/toolkit-common/**/*.h"],
#         exclude = ["toolkit/toolkit-common/posix/**"],
#     ),
#     includes = [
#         "toolkit/toolkit-common",
#     ],
#     deps = [":foundation"],
# )

# # The nebula toolkitutil module.
# cc_library(
#     name = "toolkitutil",
#     srcs = glob(
#         ["toolkit/toolkitutil/**/*.cc"],
#         exclude = [], # No specific excludes for now
#     ),
#     hdrs = glob(
#         ["toolkit/toolkitutil/**/*.h"],
#         exclude = [],
#     ),
#     includes = [
#         "toolkit/toolkitutil",
#         "code/foundation",
#         "code/render",
#         "code/",
#     ],
#     deps = [
#         ":foundation",
#         ":render",
#         ":physics",
#         ":application",
#         # "@compressonator//:cmp_core_mt",
#         # "@compressonator//:cmp_framework_mt",
#     ],
# )

# # The main nebula library.
# cc_library(
#     name = "nebula",
#     deps = [
#         ":foundation",
#         ":input",
#         ":resource",
#         ":options",
#         ":render",
#         ":physics",
#         ":audio",
#         ":memdb",
#         ":application",
#         ":toolkit-common",
#         ":toolkitutil",
#     ],
# )
