module(name = "nebula-game-engine", version = "0.0.1")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "flatbuffers", version = "25.9.23")

# Declare that we are using the extension defined in the file above
non_module_deps = use_extension("//build:extensions.bzl", "non_module_deps")

# "Pull" the repo named "glfw" out of that extension so it's visible to your project
use_repo(non_module_deps, "glfw")