module(name = "nebula-game-engine", version = "0.0.1")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "flatbuffers", version = "25.9.23")
bazel_dep(name = "imgui", version = "1.92.2")
bazel_dep(name = "sqlite3", version = "3.51.1.bcr.1")
bazel_dep(name = "curl", version = "8.11.0.bcr.4")
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")
bazel_dep(name = "tinyxml", version = "2.6.2.bcr.1")

# Declare that we are using the extension defined in the file above
non_module_deps = use_extension("//third_party/build_files:extensions.bzl", "non_module_deps")

# "Pull" the repo named "glfw" out of that extension so it's visible to your project
use_repo(non_module_deps, "glfw")
use_repo(non_module_deps, "soloud")
use_repo(non_module_deps, "stackwalker")
use_repo(non_module_deps, "tinyfiledialogs")